# Data-contract-enforcer

./: .gitignore  DESIGN.md  MEDIUM_BLOG.md  README.md  app.py  create_violation.py  pyproject.toml
.tmp_test/: embedding_baselines.npz
contract_registry/: subscriptions.yaml
contracts/: ai_extensions.py  attributor.py  generator.py  models.py  report_generator.py  runner.py  schema_analyzer.py
data_contract_enforcer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo_workspace/outputs/: bad_timestamp.jsonl  invalid_entity_enum.jsonl  missing_doc_id.jsonl
demo_workspace/validation_reports/: bad_timestamp.json  confidence_scale_break.json  invalid_entity_enum.json  missing_doc_id.json
docker/: docker-compose.yml
enforcer_report/: report_data.json
generated_contracts/: week3_extractions.yaml  week3_extractions_dbt.yml  week5_records.yaml  week5_records_dbt.yml
generated_contracts/prompt_inputs/: week3_extraction_prompt_input.json
outputs/traces/: runs.jsonl
outputs/week1/: intent_records.jsonl
outputs/week2/: verdicts.jsonl
outputs/week3/: extractions.jsonl  extractions_violated.jsonl
outputs/week4/: lineage_snapshots.jsonl
outputs/week5/: events.jsonl
pair_DAY_1/: question.md
schema_snapshots/: baselines.json
tests/: test_phase3_runner.py  test_phase4_attributor.py  test_phase5_analyzer.py  test_phase6_ai_extensions.py
validation_reports/: ai_extensions.json  ai_metrics.json  clean_run.json  injected_violation.json  schema_evolution.json  schema_evolution_week3.json  thursday_baseline.json
violation_log/: violations.jsonl
(+4 files in other folders)
